fixed form style

--- a/src/sass/_ui.scss
+++ b/src/sass/_ui.scss
@@ -351,3 +351,127 @@ img {
 		opacity: 0.5;
 	}
 }
+
+.ui-field {
+	position: relative;
+	margin-bottom: 20px;
+	&:last-child {
+		margin-bottom: 0;
+	}
+	@media (max-width: 992px) {
+		margin-bottom: 16px;
+	}
+	label.error {
+		position: absolute;
+		color: $error;
+		background-color: #fff;
+		left: 24px;
+		top: -14px;
+		padding: 2px 4px;
+		@media (max-width: 1366px) {
+			@include fz(14);
+			top: -11px;
+			left: 26px;
+			padding: 2px 2px;
+		}
+		@media (max-width: 992px) {
+			@include fz(13);
+			top: -11px;
+			left: 18px;
+			padding: 2px 2px;
+		}
+		@media (max-width: 768px) {
+			@include fz(14);			
+			left: 26px;		
+		}
+		@media (max-width: 480px) {
+			@include fz(9);
+			top: -8px;
+			left: 19px;			
+		}
+	}
+	.ui-input {
+		color: $bgc;
+		@include fz(18);      
+		font-family: $inter;
+		font-weight: 500;
+		padding: 22px 30px;
+		width: 100%;
+		border-radius: 10px;
+		border: 1px solid rgba(94, 103, 56, 0.50);
+		outline: none;    
+      &.error {
+        margin-bottom: 0px;
+      }  
+
+      @media (max-width: 1366px) {
+        @include fz(14); 
+        padding: 18px 26px;
+      }
+      @media (max-width: 1024px) {
+        @include fz(12); 
+        padding: 12px 20px;
+      }
+      @media (max-width: 992px) {
+        @include fz(12); 
+        padding: 12px 20px;
+        // margin-bottom: 10px;
+      }
+      @media (max-width: 768px) {
+        @include fz(18); 
+        padding: 18px 26px;
+      }
+      @media (max-width: 480px) {
+        @include fz(12); 
+        padding: 12px 20px;
+      }
+      &::placeholder {
+        color: $bgc;
+      }
+      &.error {
+        border-color: $error;
+      }
+	}
+
+	.ui-textarea {
+		color: $bgc;
+      @include fz(18);      
+      font-family: $inter;
+      font-weight: 500;
+      padding: 30px;
+      width: 100%;
+      height: 100%;
+      border-radius: 10px;
+      border: 1px solid rgba(94, 103, 56, 0.50);
+      resize: none;
+      outline: none;   
+      @media (max-width: 1366px) {
+        @include fz(14); 
+        padding: 18px 26px;
+      }   
+      @media (max-width: 1024px) {
+        @include fz(12); 
+        padding: 12px 20px;
+      }
+      @media (max-width: 992px) {
+        @include fz(12); 
+        padding: 12px 20px;
+      }
+      @media (max-width: 768px) {
+        @include fz(18); 
+        padding: 18px 26px;
+        // min-height: 90px;
+      }
+      @media (max-width: 480px) {
+        @include fz(12); 
+        padding: 12px 20px;
+        // min-height: 80px;
+      }
+      &::placeholder {
+        color: $bgc;
+      }
+      &.error {
+        border-color: $error;
+      }
+	}
+}
