--- a/src/css/style.css
+++ b/src/css/style.css
@@ -868,6 +868,195 @@ img {
   opacity: 0.5;
 }
 
+.ui-field {
+  position: relative;
+  margin-bottom: 20px;
+}
+.ui-field:last-child {
+  margin-bottom: 0;
+}
+@media (max-width: 992px) {
+  .ui-field {
+    margin-bottom: 16px;
+  }
+}
+.ui-field label.error {
+  position: absolute;
+  color: #FC8585;
+  background-color: #fff;
+  left: 24px;
+  top: -14px;
+  padding: 2px 4px;
+}
+@media (max-width: 1366px) {
+  .ui-field label.error {
+    font-size: 14px;
+    font-size: 0.875rem;
+    top: -11px;
+    left: 26px;
+    padding: 2px 2px;
+  }
+}
+@media (max-width: 992px) {
+  .ui-field label.error {
+    font-size: 13px;
+    font-size: 0.8125rem;
+    top: -11px;
+    left: 18px;
+    padding: 2px 2px;
+  }
+}
+@media (max-width: 768px) {
+  .ui-field label.error {
+    font-size: 14px;
+    font-size: 0.875rem;
+    left: 26px;
+  }
+}
+@media (max-width: 480px) {
+  .ui-field label.error {
+    font-size: 9px;
+    font-size: 0.5625rem;
+    top: -8px;
+    left: 19px;
+  }
+}
+.ui-field .ui-input {
+  color: #23372B;
+  font-size: 18px;
+  font-size: 1.125rem;
+  font-family: "Inter";
+  font-weight: 500;
+  padding: 22px 30px;
+  width: 100%;
+  border-radius: 10px;
+  border: 1px solid rgba(94, 103, 56, 0.5);
+  outline: none;
+}
+.ui-field .ui-input.error {
+  margin-bottom: 0px;
+}
+@media (max-width: 1366px) {
+  .ui-field .ui-input {
+    font-size: 14px;
+    font-size: 0.875rem;
+    padding: 18px 26px;
+  }
+}
+@media (max-width: 1024px) {
+  .ui-field .ui-input {
+    font-size: 12px;
+    font-size: 0.75rem;
+    padding: 12px 20px;
+  }
+}
+@media (max-width: 992px) {
+  .ui-field .ui-input {
+    font-size: 12px;
+    font-size: 0.75rem;
+    padding: 12px 20px;
+  }
+}
+@media (max-width: 768px) {
+  .ui-field .ui-input {
+    font-size: 18px;
+    font-size: 1.125rem;
+    padding: 18px 26px;
+  }
+}
+@media (max-width: 480px) {
+  .ui-field .ui-input {
+    font-size: 12px;
+    font-size: 0.75rem;
+    padding: 12px 20px;
+  }
+}
+.ui-field .ui-input::-webkit-input-placeholder {
+  color: #23372B;
+}
+.ui-field .ui-input::-moz-placeholder {
+  color: #23372B;
+}
+.ui-field .ui-input:-ms-input-placeholder {
+  color: #23372B;
+}
+.ui-field .ui-input::-ms-input-placeholder {
+  color: #23372B;
+}
+.ui-field .ui-input::placeholder {
+  color: #23372B;
+}
+.ui-field .ui-input.error {
+  border-color: #FC8585;
+}
+.ui-field .ui-textarea {
+  color: #23372B;
+  font-size: 18px;
+  font-size: 1.125rem;
+  font-family: "Inter";
+  font-weight: 500;
+  padding: 30px;
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  border: 1px solid rgba(94, 103, 56, 0.5);
+  resize: none;
+  outline: none;
+}
+@media (max-width: 1366px) {
+  .ui-field .ui-textarea {
+    font-size: 14px;
+    font-size: 0.875rem;
+    padding: 18px 26px;
+  }
+}
+@media (max-width: 1024px) {
+  .ui-field .ui-textarea {
+    font-size: 12px;
+    font-size: 0.75rem;
+    padding: 12px 20px;
+  }
+}
+@media (max-width: 992px) {
+  .ui-field .ui-textarea {
+    font-size: 12px;
+    font-size: 0.75rem;
+    padding: 12px 20px;
+  }
+}
+@media (max-width: 768px) {
+  .ui-field .ui-textarea {
+    font-size: 18px;
+    font-size: 1.125rem;
+    padding: 18px 26px;
+  }
+}
+@media (max-width: 480px) {
+  .ui-field .ui-textarea {
+    font-size: 12px;
+    font-size: 0.75rem;
+    padding: 12px 20px;
+  }
+}
+.ui-field .ui-textarea::-webkit-input-placeholder {
+  color: #23372B;
+}
+.ui-field .ui-textarea::-moz-placeholder {
+  color: #23372B;
+}
+.ui-field .ui-textarea:-ms-input-placeholder {
+  color: #23372B;
+}
+.ui-field .ui-textarea::-ms-input-placeholder {
+  color: #23372B;
+}
+.ui-field .ui-textarea::placeholder {
+  color: #23372B;
+}
+.ui-field .ui-textarea.error {
+  border-color: #FC8585;
+}
+
 .inner,
 .container {
   position: relative;
@@ -5220,83 +5409,16 @@ img {
   .screen-contest-form-left {
     padding-right: 0;
     width: 100%;
-    margin-bottom: 10px;
+    margin-bottom: 16px;
   }
-}
-.screen-contest-form-left input {
-  color: #23372B;
-  font-size: 18px;
-  font-size: 1.125rem;
-  font-family: "Inter";
-  font-weight: 500;
-  padding: 22px 30px;
-  width: 100%;
-  border-radius: 10px;
-  border: 1px solid rgba(94, 103, 56, 0.5);
-  outline: none;
-  margin-bottom: 20px;
-}
-.screen-contest-form-left input.error {
-  margin-bottom: 0px;
-}
-@media (max-width: 1366px) {
-  .screen-contest-form-left input {
-    font-size: 14px;
-    font-size: 0.875rem;
-    padding: 18px 26px;
-  }
-}
-@media (max-width: 1024px) {
-  .screen-contest-form-left input {
-    font-size: 12px;
-    font-size: 0.75rem;
-    padding: 12px 20px;
-  }
-}
-@media (max-width: 992px) {
-  .screen-contest-form-left input {
-    font-size: 12px;
-    font-size: 0.75rem;
-    padding: 12px 20px;
-    margin-bottom: 10px;
-  }
-}
-@media (max-width: 768px) {
-  .screen-contest-form-left input {
-    font-size: 18px;
-    font-size: 1.125rem;
-    padding: 18px 26px;
-  }
-}
-@media (max-width: 480px) {
-  .screen-contest-form-left input {
-    font-size: 12px;
-    font-size: 0.75rem;
-    padding: 12px 20px;
-  }
-}
-.screen-contest-form-left input::-webkit-input-placeholder {
-  color: #23372B;
-}
-.screen-contest-form-left input::-moz-placeholder {
-  color: #23372B;
-}
-.screen-contest-form-left input:-ms-input-placeholder {
-  color: #23372B;
-}
-.screen-contest-form-left input::-ms-input-placeholder {
-  color: #23372B;
-}
-.screen-contest-form-left input::placeholder {
-  color: #23372B;
-}
-.screen-contest-form-left input.error {
-  border-color: #FC8585;
 }
 .screen-contest-form-right {
   width: 50%;
   padding-left: 20px;
   margin-bottom: 60px;
+}
+.screen-contest-form-right .ui-field {
+  height: 100%;
 }
 @media (max-width: 1366px) {
   .screen-contest-form-right {
@@ -5314,73 +5436,6 @@ img {
     padding-left: 0;
     width: 100%;
   }
-}
-.screen-contest-form-right textarea {
-  color: #23372B;
-  font-size: 18px;
-  font-size: 1.125rem;
-  font-family: "Inter";
-  font-weight: 500;
-  padding: 30px;
-  width: 100%;
-  height: 100%;
-  border-radius: 10px;
-  border: 1px solid rgba(94, 103, 56, 0.5);
-  resize: none;
-  outline: none;
-}
-@media (max-width: 1366px) {
-  .screen-contest-form-right textarea {
-    font-size: 14px;
-    font-size: 0.875rem;
-    padding: 18px 26px;
-  }
-}
-@media (max-width: 1024px) {
-  .screen-contest-form-right textarea {
-    font-size: 12px;
-    font-size: 0.75rem;
-    padding: 12px 20px;
-  }
-}
-@media (max-width: 992px) {
-  .screen-contest-form-right textarea {
-    font-size: 12px;
-    font-size: 0.75rem;
-    padding: 12px 20px;
-  }
-}
-@media (max-width: 768px) {
-  .screen-contest-form-right textarea {
-    font-size: 18px;
-    font-size: 1.125rem;
-    padding: 18px 26px;
-  }
-}
-@media (max-width: 480px) {
-  .screen-contest-form-right textarea {
-    font-size: 12px;
-    font-size: 0.75rem;
-    padding: 12px 20px;
-  }
-}
-.screen-contest-form-right textarea::-webkit-input-placeholder {
-  color: #23372B;
-}
-.screen-contest-form-right textarea::-moz-placeholder {
-  color: #23372B;
-}
-.screen-contest-form-right textarea:-ms-input-placeholder {
-  color: #23372B;
-}
-.screen-contest-form-right textarea::-ms-input-placeholder {
-  color: #23372B;
-}
-.screen-contest-form-right textarea::placeholder {
-  color: #23372B;
-}
-.screen-contest-form-right textarea.error {
-  border-color: #FC8585;
 }
 .screen-contest-form-bottom {
   width: 100%;
