--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -2486,67 +2486,20 @@
     @media (max-width: 992px) {
       margin-bottom: 30px;
     }
+    
     @media (max-width: 768px) {
       padding-right: 0;
       width: 100%;
-      margin-bottom: 10px;
-    }
-    
-    input {
-      color: $bgc;
-      @include fz(18);      
-      font-family: $inter;
-      font-weight: 500;
-      padding: 22px 30px;
-      width: 100%;
-      border-radius: 10px;
-      border: 1px solid rgba(94, 103, 56, 0.50);
-      outline: none;     
-      margin-bottom: 20px;    
-      &.error {
-        margin-bottom: 0px;
-      }  
-
-      @media (max-width: 1366px) {
-        @include fz(14); 
-        padding: 18px 26px;
-      }
-      @media (max-width: 1024px) {
-        @include fz(12); 
-        padding: 12px 20px;
-      }
-      @media (max-width: 992px) {
-        @include fz(12); 
-        padding: 12px 20px;
-        margin-bottom: 10px;
-      }
-      @media (max-width: 768px) {
-        @include fz(18); 
-        padding: 18px 26px;
-      }
-      @media (max-width: 480px) {
-        @include fz(12); 
-        padding: 12px 20px;
-      }
-      &::placeholder {
-        color: $bgc;
-      }
-      &.error {
-        border-color: $error;
-      }
-    }
-
-    // input + input {
-    //   margin-top: 20px;
-    //   @media (max-width: 992px) {
-    //     margin-top: 10px;
-    //   }
-    // }
+      margin-bottom: 16px;
+    }    
   }
   &-right {
     width: 50%;
     padding-left: 20px;
     margin-bottom: 60px;
+    .ui-field {
+      height: 100%;
+    }
     @media (max-width: 1366px) {
       margin-bottom: 50px;
     }
@@ -2557,48 +2510,7 @@
       margin-left: 0;
       padding-left: 0;
       width: 100%;
-    }
-    textarea {
-      color: $bgc;
-      @include fz(18);      
-      font-family: $inter;
-      font-weight: 500;
-      padding: 30px;
-      width: 100%;
-      height: 100%;
-      border-radius: 10px;
-      border: 1px solid rgba(94, 103, 56, 0.50);
-      resize: none;
-      outline: none;   
-      @media (max-width: 1366px) {
-        @include fz(14); 
-        padding: 18px 26px;
-      }   
-      @media (max-width: 1024px) {
-        @include fz(12); 
-        padding: 12px 20px;
-      }
-      @media (max-width: 992px) {
-        @include fz(12); 
-        padding: 12px 20px;
-      }
-      @media (max-width: 768px) {
-        @include fz(18); 
-        padding: 18px 26px;
-        // min-height: 90px;
-      }
-      @media (max-width: 480px) {
-        @include fz(12); 
-        padding: 12px 20px;
-        // min-height: 80px;
-      }
-      &::placeholder {
-        color: $bgc;
-      }
-      &.error {
-        border-color: $error;
-      }
-    }
+    }    
   } 
   &-bottom {
     width: 100%;
