--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -1153,6 +1153,9 @@
   @media (max-width: 768px) {
     padding-top: 30px;
   }
+  @media (max-width: 599px) {
+    padding-bottom: 100px;
+  }
   @media (max-width: 480px) {
     padding-top: 15px;
   }
@@ -2345,10 +2348,7 @@
           justify-content: center;
           .pagination__arrows {
             display: none;            
-          }
-          .ui-btn {            
-            // bottom: -60px;
-          }
+          }          
         }        
       }
     }
